fixed letter spacing bug as per css validator

--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -36,7 +36,7 @@
 
 .home-heading {
     font-family: "Dancing Script", sans-serif;
-    letter-spacing: 3x;
+    letter-spacing: 2px;
     text-align: center;
     font-size: 2em;
 }
